# itch5-hft-parser

./: .gitignore  :w  CMakeLists.txt  README.md  compile_commands.json  setup.sh
analysis/: plot_latency_distribution.py  plot_prices.py
benchmark/: bm_parser.cpp  bm_parser_v1.cpp  bm_parser_v2.cpp
include/: array_level.hpp  array_level_binary_search.hpp  dpdk_context.hpp  handler.hpp  map_level.hpp  order_book.hpp  order_book_handler_single.hpp  order_book_shared.hpp  parser.hpp  parser_v1.hpp  parser_v2.hpp  spmc_queue.hpp  vector_level.hpp  vector_level_split_array.hpp
include/benchmarks/: benchmark_utils.hpp  example_benchmark.hpp  example_benchmark_parsing.hpp
include/levels/: array_levels_v2.hpp  heap_level.hpp  heap_levels_custom_map.hpp  vector_levels_b_search_split.hpp
src/: dpdk_context.cpp  main.cpp  parser.cpp
src/benchmarks/: benchmark_utils.cpp
